--- a/library_widget/src/main/res/values/attrs.xml
+++ b/library_widget/src/main/res/values/attrs.xml
@@ -1191,4 +1191,21 @@
         <attr name="slope" format="float" />
         <attr name="offset" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="ArcProgress">
+        <attr name="progress" format="integer"/>
+        <attr name="max" format="integer"/>
+        <attr name="arc_angle" format="float"/>
+        <attr name="progress_width" format="dimension"/>
+        <attr name="progress_color" format="color"/>
+        <attr name="background_color" format="color"/>
+
+        <attr name="text" format="string"/>
+        <attr name="text_size" format="dimension"/>
+        <attr name="text_color" format="color"/>
+
+        <attr name="bottom_text" format="string"/>
+        <attr name="bottom_text_size" format="dimension"/>
+        <attr name="bottom_text_color" format="color"/>
+    </declare-styleable>
 </resources>
