--- a/module_home/src/main/res/values/colors.xml
+++ b/module_home/src/main/res/values/colors.xml
@@ -56,4 +56,6 @@
      <color name="home_tv_weather_new_title_bg">#ffffff</color>
      <color name="home_tv_sun_moon_text_color">#333333</color>
      <color name="home_tv_sun_rise_set_time_text_color">#999999</color>
+     <color name="home_weather_arc_bottom_text_color">#666666</color>
+     <color name="home_air_quality_text_color">#333333</color>
 </resources>
