--- a/module_home/src/main/res/values-night/colors.xml
+++ b/module_home/src/main/res/values-night/colors.xml
@@ -43,4 +43,6 @@
     <color name="home_tv_weather_new_title_bg">#303030</color>
     <color name="home_tv_sun_moon_text_color">#D3D3D3</color>
     <color name="home_tv_sun_rise_set_time_text_color">#666666</color>
+    <color name="home_weather_arc_bottom_text_color">#999999</color>
+    <color name="home_air_quality_text_color">#D3D3D3</color>
 </resources>
