引入城市列表索引界面

--- a/library_widget/src/main/res/values/attrs.xml
+++ b/library_widget/src/main/res/values/attrs.xml
@@ -1208,4 +1208,17 @@
         <attr name="bottom_text_size" format="dimension"/>
         <attr name="bottom_text_color" format="color"/>
     </declare-styleable>
+
+    <attr name="indexBarTextSize" format="reference" />
+    <attr name="indexBarNormalTextColor" format="reference" />
+    <attr name="indexBarSelectedTextColor" format="reference" />
+
+
+    <declare-styleable name="SideIndexView">
+
+        <attr name="side_text_size" format="dimension" />
+        <attr name="side_text_color" format="color"/>
+        <attr name="side_text_touch_color" format="color"/>
+
+    </declare-styleable>
 </resources>
