--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -279,4 +279,7 @@
      <dimen name="home_tv_news_date_text_size">18sp</dimen>
      <dimen name="home_tv_news_date_margin_top">10dp</dimen>
      <dimen name="home_tv_news_date_margin_left">10dp</dimen>
+     <dimen name="home_tv_location_margin_top">30dp</dimen>
+     <dimen name="home_tv_location_margin_right">10dp</dimen>
+     <dimen name="home_tv_location_text_size">16sp</dimen>
 </resources>
