完善城市列表指引器

--- a/library_widget/src/main/res/values/attrs.xml
+++ b/library_widget/src/main/res/values/attrs.xml
@@ -1221,4 +1221,13 @@
         <attr name="side_text_touch_color" format="color"/>
 
     </declare-styleable>
+
+
+    <declare-styleable name="CitySectionView">
+
+        <attr name="section_height" format="dimension" />
+        <attr name="section_background" format="color"/>
+        <attr name="section_text_size" format="dimension"/>
+        <attr name="section_text_color" format="dimension"/>
+    </declare-styleable>
 </resources>
