--- a/library_widget/src/main/res/layout/city_default_item.xml
+++ b/library_widget/src/main/res/layout/city_default_item.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.flexbox.FlexboxLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/city_list_item_name"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cityChipGroup"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:background="?attr/selectableItemBackground"
-    android:clickable="true"
-    android:focusable="true"
-    android:gravity="center_vertical"
-    android:paddingLeft="16dp"
-    android:paddingStart="16dp"
-    android:textColor="@color/base_tv_title_color"
-    android:textSize="@dimen/base_dimen_16"
-    tools:ignore="RtlSymmetry" />
+    android:layout_height="wrap_content"
+    app:flexWrap="wrap"
+    app:alignItems="flex_start"
+    android:padding="16dp"
+    app:justifyContent="flex_start">
+</com.google.android.flexbox.FlexboxLayout>
