--- a/library_widget/src/main/res/values/ids.xml
+++ b/library_widget/src/main/res/values/ids.xml
@@ -2,4 +2,5 @@
 <resources>
     <item type="id" name="expandable_text"/>
     <item type="id" name="expand_collapse"/>
+    <item type="id" name="city_tag" />
 </resources>
