--- a/module_home/src/main/res/values/dimens.xml
+++ b/module_home/src/main/res/values/dimens.xml
@@ -282,4 +282,7 @@
      <dimen name="home_tv_location_margin_top">30dp</dimen>
      <dimen name="home_tv_location_margin_right">10dp</dimen>
      <dimen name="home_tv_location_text_size">16sp</dimen>
+     <dimen name="home_rl_choose_city_height">52dp</dimen>
+     <dimen name="home_search_city_et_margin_start">5dp</dimen>
+     <dimen name="home_search_city_et_margin_left">5dp</dimen>
 </resources>
