--- a/module_home/src/main/res/layouts/items/layout/home_hour_weather_head.xml
+++ b/module_home/src/main/res/layouts/items/layout/home_hour_weather_head.xml
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:text="24小时预报"
             android:textSize="16sp"
-            android:textColor="#333333"
+            android:textColor="@color/home_tv_hour_weather_title"
             android:textStyle="bold"
             android:layout_marginLeft="10dp"
             android:layout_centerVertical="true"
@@ -35,7 +35,7 @@
             android:id="@+id/tv_sunrist_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#545455"
+            android:textColor="@color/home_tv_sunrist_time_text_color"
             android:layout_marginRight="15dp"
             android:drawableLeft="@drawable/home_icon_sunrise"
             android:layout_toLeftOf="@+id/tv_sunset_time"
@@ -49,7 +49,7 @@
             android:id="@+id/tv_sunset_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#545455"
+            android:textColor="@color/home_tv_sunset_time_text_color"
             android:layout_alignParentRight="true"
             android:layout_marginRight="10dp"
             android:drawableLeft="@drawable/home_icon_sunset"
