--- a/module_home/src/main/res/values-night/colors.xml
+++ b/module_home/src/main/res/values-night/colors.xml
@@ -5,7 +5,7 @@
     <color name="home_bar_search">#333333</color>
     <color name="home_bar_hint">#999999</color>
     <color name="home_recommend_home_bg">#000000</color>
-    <color name="home_tv_hot_value_text_color">#000000</color>
+    <color name="home_tv_hot_value_text_color">#999999</color>
     <color name="home_real_time_title_text_color">#FFB673</color>
     <color name="home_rl_real_time_title_background">#303030</color>
     <color name="home_everypush_bottom_message">#303030</color>
@@ -45,6 +45,17 @@
     <color name="home_tv_sun_rise_set_time_text_color">#666666</color>
     <color name="home_weather_arc_bottom_text_color">#999999</color>
     <color name="home_air_quality_text_color">#D3D3D3</color>
-    <color name="home_tv_location_text_color">#999999</color>
+
     <color name="home_search_edittext_bg">#444444</color>
+    <color name="home_tv_weather_today_minmax_degree_text_color">#D3D3D3</color>
+    <color name="home_tv_hour_weather_title">#D3D3D3</color>
+    <color name="home_tv_sunrist_time_text_color">#8D8D8E</color>
+    <color name="home_tv_sunset_time_text_color">#8D8D8E</color>
+    <color name="home_tv_hour_degree_text_color">#8D8D8E</color>
+    <color name="home_btn_login_name_text_color">#F4F2F2</color>
+    <color name="home_tv_weather_degree_text_color">#F4F2F2</color>
+    <color name="home_tv_weather_text_color">#F4F2F2</color>
+    <color name="home_tv_location_text_color">#F4F2F2</color>
+    <color name="home_tv_weather_wind_text_color">#F4F2F2</color>
+    <color name="home_air_quality_level_text_color">#F4F2F2</color>
 </resources>
