--- a/library_base/src/main/res/values/styles.xml
+++ b/library_base/src/main/res/values/styles.xml
@@ -5,6 +5,14 @@
         <item name="colorPrimary">@android:color/white</item>
         <item name="colorPrimaryDark">@android:color/white</item>
         <item name="colorAccent">@android:color/white</item>
+
+
+        <!-- 必须添加的属性 -->
+        <item name="colorSurface">@android:color/white</item>
+        <item name="colorOnSurface">@android:color/black</item>
+
+        <item name="colorOnBackground">@android:color/black</item>
+
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Toast</item>
@@ -47,11 +55,6 @@
         <item name="cornerSize">@dimen/base_dimen_4</item>
     </style>
 
-    <!-- res/values/styles.xml -->
-    <style name="base_MyChipTheme" parent="Theme.Material3.DayNight">
-        <item name="chipStyle">@style/Widget.Material3.Chip.Assist</item>
-
-    </style>
 
 
 
